[package]
name = "rolltag"
version = "0.3.0"
edition = "2024"

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
rayon = "1.11.0"
rexiv2 = "0.10.0"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting", "macros"] }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true
